--- a/contato.html
+++ b/contato.html
@@ -4,8 +4,11 @@
 
     <title>Investindo Conciente</title>
     <meta charset="utf-8">
+    <meta name="description" content="Este site busca ensinar educação financeira para pessoas que querem mudar de vida.">
+    <meta name="author" content="Carlos Miguel de Lara">
     <!--meta tag para responsivo-->
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
+    <meta name="viewport" content="
+    width=device-width,initial-scale=1.0,maximum-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -61,7 +64,7 @@
           </div>
           <div class="w40 tags-form">
             <h2><i class="fa fa-comment"></i> Fale com a nossa Equipe</h2>
-            <p>Para mais informações entre em contato para mais informações </p>
+            <p>Para mais informações entre em contato.</p>
             <p class="tag-contato"><i class="fa fa-instagram"></i>/Instagram</p>
           </div>
           <div class="clear"></div>
