--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div class="overlay"></div>
             <div class="container">
                <h2>Investindo Consciente</h2>
-               <p>Essa página, tem como objetivo dar conhecimentos básicos de aprendizado a quem se sente motivado, a ter experiências no mercado financeiro,mostrando como cuidar, poupar e a investi-lo. </p>
-               <p>E como você pode ter paixão por isso, para se previnir em casos de doenças, acidentes, desemprego,independente da situação econômica ou política, para que fique sempre em segurança com seu dinheiro e esteja acima da média das pessoas.</p>
+               <p>Essa página, tem como objetivo dar conhecimentos básicos de aprendizado a quem se sente motivado,  a ter experiências no mercado financeiro, mostrando como cuidar, poupar e a investi-lo. </p>
+               <p>E como você pode ter paixão por isso, para se previnir em casos de Inceterzas, desemprego, independente da situação econômica ou política, para que fique sempre em segurança com seu dinheiro e esteja acima da média.</p>
             </div>
        </section>
        <section class="diferenciais">
@@ -88,7 +88,7 @@
                    <div class="line-text">
                 <div style="width:30px;"></div>
                    <h2>Sobre</h2>
-                   <p>Sou um investidor iniciante, que está construindo patrimonio, e irei mostrar todos os anos minha evolução.</p>
+                   <p>Sou um investidor iniciante, e estou construindo patrimônio, e irei mostrar todos os anos minha evolução.</p>
                </div>
                </div><!--sobre-container-->
            </div><!--container-->
@@ -100,7 +100,7 @@
            </div>
            <div class="w50 center">
               <form class="inscricao-form">
-                  <input type="text" name=""><input type="submit" name="Enviar!">
+                  <input type="text" name="E-mail"><input type="submit" name="Enviar">
               </form>
            </div>
                <div class="clear"></div>
@@ -121,7 +121,7 @@
                 <div class="card-single">
                     <img src="investidor.jpg" alt="" title=""/>
                     <h3>E daqui a 30 anos?</h3>
-                    <p>Quais perspectivas e sonhos você tem agora para o futuro?,você está plantando o necessário para vivercom tranquilidade?</p>
+                    <p>Quais perspectivas e sonhos você tem agora para o futuro?,você está plantando o necessário para viver com tranquilidade?</p>
                 </div>
                 <div class="clear"></div>
             </div>
