--- a/index.html
+++ b/index.html
@@ -46,20 +46,20 @@
                </div>
                <div class="icones-diferenciais">
                    <div class="box-icone-single"> 
-                    <h2><i class="fa fa-bolt" aria-hidden="true"></i></h2>
-                    <h3 style="color: #FF0000;">Saber seu valor!</h3>
+                    <h2><i style="color:#FF0000; " class="fa fa-bolt" aria-hidden="true"></i></h2>
+                    <h3 style="color: #52aaa7;">Saber seu valor!</h3>
                     <p>Você consegue me dizer o quanto você vale? Quanto vale sua hora de trabalho? Seu dia?</p>
                     <p>De nada adianta ganhar bem se gasta tudo, se ganha R$100,00 todos os dias se gasta o mesmo valor ou até mais em coisas como.</p>
                    </div><!--box-icone-single-->
                     <div class="box-icone-single"> 
-                    <h2><i class="fa fa-bolt" aria-hidden="true"></i></h2>
-                    <h3 style="color: #FFFF00;">A arte de poupar!</h3>
+                    <h2><i style="color: #FFFF00;" class="fa fa-bolt" aria-hidden="true"></i></h2>
+                    <h3 style="color: #52aaa7;">A arte de poupar!</h3>
                     <p>Poupar é uma arte, há algo implícito em poupar, que é deixar de ir em uma festa, uma janta fora de casa que irá fazer com que se gaste mais do recebe.<br>
                     Mas isso não significa que você não pode se divertir e etc...</p>
                    </div><!--box-icone-single-->
                     <div class="box-icone-single"> 
-                    <h2><i class="fa fa-bolt" aria-hidden="true"></i></h2>
-                    <h3 style="color: #00FF00;">Só poupar basta?</h3>
+                    <h2><i  style="color: #00FF00;" class="fa fa-bolt" aria-hidden="true"></i></h2>
+                    <h3 style="color: #52aaa7;">Só poupar basta?</h3>
                     <p>Não,poupar não irá te render absolutamente nada, mas aí entra uma famosa palavra chamada juros que podem salvar sua vida.</p>
                    </div><!--box-icone-single-->
                    <div class="clear"></div>
