--- a/contato.html
+++ b/contato.html
@@ -19,8 +19,8 @@
               <nav class="menu-desktop">
                   <ul>
                       <li><a href="index.html">Home</a></li>
-                      <li><a href="contato.html">Contato</a></li>
-                      <li class="selected"><a href="sobre.html">Sobre</a></li>
+                      <li class="selected"><a href="contato.html">Contato</a></li>
+                      <li ><a href="sobre.html">Sobre</a></li>
                   </ul>
               </nav>
               <nav class="menu-mobile">
